--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,69 @@
+body {
+  background-color: #f9f7fe;
+  font-family: Helvetica, Arial, sans-serif;
+}
 
+a {
+  color: #885df1;
+}
+
+.container {
+  margin: 120px auto;
+  max-width: 600px;
+}
+
+header {
+  margin-bottom: 30px;
+}
+
+h1 {
+  text-align: center;
+  font-weight: 800;
+  font-size: 36px;
+  line-height: 1.5;
+  color: #272044;
+}
+form {
+  background-color: white;
+  padding: 30px;
+  border-radius: 10px;
+  display: flex;
+  margin-bottom: 30px;
+  box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
+}
+
+.submit-button {
+  color: white;
+  width: 150px;
+  border-radius: 50px;
+  margin-left: 10px;
+  font-size: 16px;
+  line-height: 20px;
+  background-color: #885df1;
+  border: none;
+  padding: 14px 24px;
+}
+.enter-button {
+  padding: 16px;
+  border: 1px solid rgba(39, 33, 66, 0.5);
+  width: 80%;
+  font-size: 16px;
+  border-radius: 50px;
+  line-height: 20px;
+  color: #272044;
+}
+
+.content {
+  background-color: #fff;
+  border-left: 3px solid #885df1;
+  padding: 20px;
+  font-size: 16px;
+  line-height: 2;
+  box-shadow: 0px 4px 30px 0px rgba(39, 33, 66, 0.03);
+}
+
+footer {
+  font-size: 13px;
+  text-align: center;
+  margin-top: 30px;
+}
