--- a/src/style.css
+++ b/src/style.css
@@ -61,6 +61,9 @@ form {
   line-height: 2;
   box-shadow: 0px 4px 30px 0px rgba(39, 33, 66, 0.03);
 }
+.content strong {
+  color: #885df1;
+}
 
 footer {
   font-size: 13px;
