--- a/src/style.css
+++ b/src/style.css
@@ -23,13 +23,15 @@ h1 {
   line-height: 1.5;
   color: #272044;
 }
-form {
+.form-container {
   background-color: white;
-  padding: 30px;
-  border-radius: 10px;
-  display: flex;
   margin-bottom: 30px;
+  border-radius: 10px;
   box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
+  padding: 15px 20px;
+}
+form {
+  display: flex;
 }
 
 .submit-button {
@@ -52,6 +54,12 @@ form {
   line-height: 20px;
   color: #272044;
 }
+.hint {
+  line-height: 1.5;
+  margin-top: 5px;
+  opacity: 0.6;
+  font-size: 12px;
+}
 
 .content {
   background-color: #fff;
@@ -69,4 +77,16 @@ footer {
   font-size: 13px;
   text-align: center;
   margin-top: 30px;
+}
+.hidden {
+  display: none;
+}
+.generating {
+  animation: blinker 1s linear infinite;
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
 }
